<resources>
    <string name="app_name" translatable="false">牛辰昊_News</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news_content">NewsContentActivity</string>
    <string name="menu_share">share it!</string>
    <string name="customize_channels">Customize Channels</string>
    <string name="recommend">Recommend</string>
    <string name="opml_filename">opml.xml</string>
    <string name="more_channels">more channels</string>
    <string name="my_channels">my channels</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">enter your keyword!</string>
    <string name="favourite">favourite</string>
    <string name="unfavourite">unfavourite</string>
    <string name="dialog_deleteAll">clear database?</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data">Clear All Cache</string>
</resources>