<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favourite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_channel"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/customize_channels"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/clear_data"
        android:icon="@drawable/ic_delete"
        android:title="@string/clear_data"
        app:showAsAction="ifRoom"/>
</menu>